fixed overflow scrolling

--- a/src/styles/ReminderCard.css
+++ b/src/styles/ReminderCard.css
@@ -46,7 +46,6 @@
     border-radius: 16px;
     border: 1px solid #55BDE5;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-    overflow: scroll;
     padding: 16px;
 }
 
